added page structure w/ html5

--- a/index.html
+++ b/index.html
@@ -1,17 +1,62 @@
 <html>
-    <body>
-        <div class="article-container">
-          <div>
-             <h1> BharatPe founder asks for the removal of CEO from board </h1>
-             <p>BharatPe co-founder and managing director Ashneer Grover has asked the board for the removal of chief executive Suhail Sameer from the board in the latest of a series of remarkable turn of events at the Tiger Global-backed Indian fintech startup.</p>
-             <p>Grover, who is subject to an ongoing investigation whose preliminary finding has suggested fraud, wrote in a letter to board members on Wednesday for the removal of Sameer from the board, though he did not offer an explanation.</p>
-             <p>“I, now, in exercise of the power vested in me by Clause 3.7 of the SHA and Clause 91.7 of the AoA do hereby withdraw, my nomination of Suhail Sameer as a Director nominated by me to the Board of Directors of the Company.” </p>
-             <p>“In light thereof, I, Ashneer Grover request the Board of Directors of the Company to complete the necessary processes to record the cessation of the Directorship of Suhail Sameer as a Director of the Company,” the letter reads, the contents of which was reviewed by TechCrunch.</p>
-        </div>
-        <div>
-          <img src="https://cdn.pixabay.com/photo/2022/01/31/15/21/guinea-pig-6984090_1280.jpg" alt="a cute guinea pig on the left with an orchid placed on the right">
-         <a href="https://pixabay.com" target="_blank">Find more images on Pixabay</a>
-        </div>
-        </div>
-    </body>
+  <body>
+      <main>
+        <header>
+          <h1>Title goes here</h1>
+        </header>
+
+    <div class="article-container">
+    <div>
+      <h2> BharatPe founder asks for the removal of CEO from board </h1>
+      <p>BharatPe co-founder and managing director Ashneer Grover has asked the board for the removal of chief executive Suhail Sameer from the board in the latest of a series of remarkable turn of events at the Tiger Global-backed Indian fintech startup.</p>
+      <p>Grover, who is subject to an ongoing investigation whose preliminary finding has suggested fraud, wrote in a letter to board members on Wednesday for the removal of Sameer from the board, though he did not offer an explanation.</p>
+      <p>“I, now, in exercise of the power vested in me by Clause 3.7 of the SHA and Clause 91.7 of the AoA do hereby withdraw, my nomination of Suhail Sameer as a Director nominated by me to the Board of Directors of the Company.” </p>
+      <p>“In light thereof, I, Ashneer Grover request the Board of Directors of the Company to complete the necessary processes to record the cessation of the Directorship of Suhail Sameer as a Director of the Company,” the letter reads, the contents of which was reviewed by TechCrunch.</p>
+    </div>
+
+    <figure>
+      <img src="https://cdn.pixabay.com/photo/2022/01/31/15/21/guinea-pig-6984090_1280.jpg" alt="a cute guinea pig on the left with an orchid placed on the right">
+      <a href="https://pixabay.com" target="_blank">Find more images on Pixabay</a>
+      <figcaption>Image caption</figcaption>
+    </figure>
+    </div>
+  </article>
+
+  <div class="article-container">
+    <div>
+      <h2> BharatPe founder asks for the removal of CEO from board </h1>
+      <p>BharatPe co-founder and managing director Ashneer Grover has asked the board for the removal of chief executive Suhail Sameer from the board in the latest of a series of remarkable turn of events at the Tiger Global-backed Indian fintech startup.</p>
+      <p>Grover, who is subject to an ongoing investigation whose preliminary finding has suggested fraud, wrote in a letter to board members on Wednesday for the removal of Sameer from the board, though he did not offer an explanation.</p>
+      <p>“I, now, in exercise of the power vested in me by Clause 3.7 of the SHA and Clause 91.7 of the AoA do hereby withdraw, my nomination of Suhail Sameer as a Director nominated by me to the Board of Directors of the Company.” </p>
+      <p>“In light thereof, I, Ashneer Grover request the Board of Directors of the Company to complete the necessary processes to record the cessation of the Directorship of Suhail Sameer as a Director of the Company,” the letter reads, the contents of which was reviewed by TechCrunch.</p>
+    </div>
+
+    <figure>
+      <img src="https://cdn.pixabay.com/photo/2022/01/31/15/21/guinea-pig-6984090_1280.jpg" alt="a cute guinea pig on the left with an orchid placed on the right">
+      <a href="https://pixabay.com" target="_blank">Find more images on Pixabay</a>
+      <figcaption>Image caption</figcaption>
+    </figure>
+    </div>
+  </article>
+
+  <div class="article-container">
+    <div>
+      <h2> BharatPe founder asks for the removal of CEO from board </h1>
+      <p>BharatPe co-founder and managing director Ashneer Grover has asked the board for the removal of chief executive Suhail Sameer from the board in the latest of a series of remarkable turn of events at the Tiger Global-backed Indian fintech startup.</p>
+      <p>Grover, who is subject to an ongoing investigation whose preliminary finding has suggested fraud, wrote in a letter to board members on Wednesday for the removal of Sameer from the board, though he did not offer an explanation.</p>
+      <p>“I, now, in exercise of the power vested in me by Clause 3.7 of the SHA and Clause 91.7 of the AoA do hereby withdraw, my nomination of Suhail Sameer as a Director nominated by me to the Board of Directors of the Company.” </p>
+      <p>“In light thereof, I, Ashneer Grover request the Board of Directors of the Company to complete the necessary processes to record the cessation of the Directorship of Suhail Sameer as a Director of the Company,” the letter reads, the contents of which was reviewed by TechCrunch.</p>
+    </div>
+
+    <figure>
+      <img src="https://cdn.pixabay.com/photo/2022/01/31/15/21/guinea-pig-6984090_1280.jpg" alt="a cute guinea pig on the left with an orchid placed on the right">
+      <a href="https://pixabay.com" target="_blank">Find more images on Pixabay</a>
+      <figcaption>Image caption</figcaption>
+    </figure>
+    </div>
+  </article>
+  
+
+    </main>
+  </body>
 </html>
