added full width header

--- a/index.html
+++ b/index.html
@@ -1,62 +1,84 @@
-<html>
-  <body>
-      <main>
-        <header>
-          <h1>Title goes here</h1>
-        </header>
+<html>        
+    <head>
+        <title>Typography journal</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:wght@300;700&display=swap" rel="stylesheet">   
+    </head>
+    <style>
+        h1, h2 {
+            font-family: 'Abril Fatface', cursive;
+            color:#5500ff;
+        }
+        
+        p, a {
+            font-family: 'Roboto', sans-serif;
+            font-size: 14px;
+            color:#0d0d0d;
+        }
+    </style>
+    <body>
 
-    <div class="article-container">
-    <div>
-      <h2> BharatPe founder asks for the removal of CEO from board </h1>
-      <p>BharatPe co-founder and managing director Ashneer Grover has asked the board for the removal of chief executive Suhail Sameer from the board in the latest of a series of remarkable turn of events at the Tiger Global-backed Indian fintech startup.</p>
-      <p>Grover, who is subject to an ongoing investigation whose preliminary finding has suggested fraud, wrote in a letter to board members on Wednesday for the removal of Sameer from the board, though he did not offer an explanation.</p>
-      <p>“I, now, in exercise of the power vested in me by Clause 3.7 of the SHA and Clause 91.7 of the AoA do hereby withdraw, my nomination of Suhail Sameer as a Director nominated by me to the Board of Directors of the Company.” </p>
-      <p>“In light thereof, I, Ashneer Grover request the Board of Directors of the Company to complete the necessary processes to record the cessation of the Directorship of Suhail Sameer as a Director of the Company,” the letter reads, the contents of which was reviewed by TechCrunch.</p>
-    </div>
+        <main>
 
-    <figure>
-      <img src="https://cdn.pixabay.com/photo/2022/01/31/15/21/guinea-pig-6984090_1280.jpg" alt="a cute guinea pig on the left with an orchid placed on the right">
-      <a href="https://pixabay.com" target="_blank">Find more images on Pixabay</a>
-      <figcaption>Image caption</figcaption>
-    </figure>
-    </div>
-  </article>
+            <header>
+                <h1>Title of the page goes here</h1>
+            </header>
 
-  <div class="article-container">
-    <div>
-      <h2> BharatPe founder asks for the removal of CEO from board </h1>
-      <p>BharatPe co-founder and managing director Ashneer Grover has asked the board for the removal of chief executive Suhail Sameer from the board in the latest of a series of remarkable turn of events at the Tiger Global-backed Indian fintech startup.</p>
-      <p>Grover, who is subject to an ongoing investigation whose preliminary finding has suggested fraud, wrote in a letter to board members on Wednesday for the removal of Sameer from the board, though he did not offer an explanation.</p>
-      <p>“I, now, in exercise of the power vested in me by Clause 3.7 of the SHA and Clause 91.7 of the AoA do hereby withdraw, my nomination of Suhail Sameer as a Director nominated by me to the Board of Directors of the Company.” </p>
-      <p>“In light thereof, I, Ashneer Grover request the Board of Directors of the Company to complete the necessary processes to record the cessation of the Directorship of Suhail Sameer as a Director of the Company,” the letter reads, the contents of which was reviewed by TechCrunch.</p>
-    </div>
+            <article class="article-container">
+                <div>
+                    <h2>BharatPe founder asks for the removal of CEO from board</h2>
+                    <p>BharatPe co-founder and managing director Ashneer Grover has asked the board for the removal of chief executive Suhail Sameer from the board in the latest of a series of remarkable turn of events at the Tiger Global-backed Indian fintech startup.</p>
+                    <p>Grover, who is subject to an ongoing investigation whose preliminary finding has suggested fraud, wrote in a letter to board members on Wednesday for the removal of Sameer from the board, though he did not offer an explanation.</p>
+                    <p>“I, now, in exercise of the power vested in me by Clause 3.7 of the SHA and Clause 91.7 of the AoA do hereby withdraw, my nomination of Suhail Sameer as a Director nominated by me to the Board of Directors of the Company.”</p>
+                    <p>“In light thereof, I, Ashneer Grover request the Board of Directors of the Company to complete the necessary processes to record the cessation of the Directorship of Suhail Sameer as a Director of the Company,” the letter reads, the contents of which was reviewed by TechCrunch.</p>
+                    <a href="https://pixabay.com/" target="_blank">Find more images in Pixabay</a>
+                </div>
+                <figure>
+                  <img src="https://cdn.pixabay.com/photo/2022/01/31/15/21/guinea-pig-6984090_1280.jpg" alt="a cute guinea pig on the left with an orchid placed on the right">
+                  <a href="https://pixabay.com" target="_blank">Find more images on Pixabay</a>
+                  <figcaption>Image caption</figcaption>
+                </figure>
+            </article>
 
-    <figure>
-      <img src="https://cdn.pixabay.com/photo/2022/01/31/15/21/guinea-pig-6984090_1280.jpg" alt="a cute guinea pig on the left with an orchid placed on the right">
-      <a href="https://pixabay.com" target="_blank">Find more images on Pixabay</a>
-      <figcaption>Image caption</figcaption>
-    </figure>
-    </div>
-  </article>
+            <article class="article-container">
+                <div>
+                    <h2>BharatPe founder asks for the removal of CEO from board</h2>
+                    <p>BharatPe co-founder and managing director Ashneer Grover has asked the board for the removal of chief executive Suhail Sameer from the board in the latest of a series of remarkable turn of events at the Tiger Global-backed Indian fintech startup.</p>
+                    <p>Grover, who is subject to an ongoing investigation whose preliminary finding has suggested fraud, wrote in a letter to board members on Wednesday for the removal of Sameer from the board, though he did not offer an explanation.</p>
+                    <p>“I, now, in exercise of the power vested in me by Clause 3.7 of the SHA and Clause 91.7 of the AoA do hereby withdraw, my nomination of Suhail Sameer as a Director nominated by me to the Board of Directors of the Company.”</p>
+                    <p>“In light thereof, I, Ashneer Grover request the Board of Directors of the Company to complete the necessary processes to record the cessation of the Directorship of Suhail Sameer as a Director of the Company,” the letter reads, the contents of which was reviewed by TechCrunch.</p>
+                    <a href="https://pixabay.com/" target="_blank">Find more images in Pixabay</a>
+                </div>
+                <figure>
+                    <img src="https://cdn.pixabay.com/photo/2022/01/18/07/38/cat-6946505_1280.jpg" alt="orange and white cat">
+                    <figcaption>Image caption</figcaption>
+                </figure>
+            </article>
 
-  <div class="article-container">
-    <div>
-      <h2> BharatPe founder asks for the removal of CEO from board </h1>
-      <p>BharatPe co-founder and managing director Ashneer Grover has asked the board for the removal of chief executive Suhail Sameer from the board in the latest of a series of remarkable turn of events at the Tiger Global-backed Indian fintech startup.</p>
-      <p>Grover, who is subject to an ongoing investigation whose preliminary finding has suggested fraud, wrote in a letter to board members on Wednesday for the removal of Sameer from the board, though he did not offer an explanation.</p>
-      <p>“I, now, in exercise of the power vested in me by Clause 3.7 of the SHA and Clause 91.7 of the AoA do hereby withdraw, my nomination of Suhail Sameer as a Director nominated by me to the Board of Directors of the Company.” </p>
-      <p>“In light thereof, I, Ashneer Grover request the Board of Directors of the Company to complete the necessary processes to record the cessation of the Directorship of Suhail Sameer as a Director of the Company,” the letter reads, the contents of which was reviewed by TechCrunch.</p>
-    </div>
+            <article class="article-container">
+                <div>
+                    <h2>BharatPe founder asks for the removal of CEO from board</h2>
+                    <p>BharatPe co-founder and managing director Ashneer Grover has asked the board for the removal of chief executive Suhail Sameer from the board in the latest of a series of remarkable turn of events at the Tiger Global-backed Indian fintech startup.</p>
+                    <p>Grover, who is subject to an ongoing investigation whose preliminary finding has suggested fraud, wrote in a letter to board members on Wednesday for the removal of Sameer from the board, though he did not offer an explanation.</p>
+                    <p>“I, now, in exercise of the power vested in me by Clause 3.7 of the SHA and Clause 91.7 of the AoA do hereby withdraw, my nomination of Suhail Sameer as a Director nominated by me to the Board of Directors of the Company.”</p>
+                    <p>“In light thereof, I, Ashneer Grover request the Board of Directors of the Company to complete the necessary processes to record the cessation of the Directorship of Suhail Sameer as a Director of the Company,” the letter reads, the contents of which was reviewed by TechCrunch.</p>
+                    <a href="https://pixabay.com/" target="_blank">Find more images in Pixabay</a>
+                </div>
+                <figure>
+                    <img src="https://cdn.pixabay.com/photo/2022/01/18/07/38/cat-6946505_1280.jpg" alt="orange and white cat">
+                    <figcaption>Image caption</figcaption>
+                </figure>
+            </article>
+            
+        </main>
+        <footer>
+          <div>
+          WVZ &copy;2022
+          </div>
+        </footer>
 
-    <figure>
-      <img src="https://cdn.pixabay.com/photo/2022/01/31/15/21/guinea-pig-6984090_1280.jpg" alt="a cute guinea pig on the left with an orchid placed on the right">
-      <a href="https://pixabay.com" target="_blank">Find more images on Pixabay</a>
-      <figcaption>Image caption</figcaption>
-    </figure>
-    </div>
-  </article>
+    </body>
+</html>
 
 
-    </main>
-  </body>
-<html>
