added stylesheet link

--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
 <html>        
     <head>
         <title>Typography journal</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:wght@300;700&display=swap" rel="stylesheet">   
+        <link rel="preconnect" href="https://fonts.googleapis.com"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:wght@300;700&display=swap" rel="stylesheet"/>   
+        <link rel="stylesheet" href="styles/styles.css"/>
     </head>
-    <style>
-        h1, h2 {
-            font-family: 'Abril Fatface', cursive;
-            color:#5500ff;
-        }
-        
-        p, a {
-            font-family: 'Roboto', sans-serif;
-            font-size: 14px;
-            color:#0d0d0d;
-        }
-    </style>
+   
     <body>
 
         <main>
